modify test cases for search policy feature